<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.RegisterActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/title"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/bg_primary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/daftar_1_bua"
                android:fontFamily="@font/sogoe_ui"
                android:textStyle="bold"
                android:textColor="@color/blue_primary"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                style="@style/ShadowText"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:tint="@color/grey_primary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />
                <ImageButton
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    android:tint="@color/grey_primary"
                    android:background="@drawable/bg_btn_circle_white"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="3dp"
                    app:layout_constraintEnd_toEndOf="@id/profile_image"
                    app:layout_constraintBottom_toBottomOf="@id/profile_image"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftar_2_nma"
                app:boxBackgroundColor="@color/trans"
                app:boxStrokeColor="@color/grey_primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="#AEAEAE">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sogoe_ui"
                    android:background="@color/trans"
                    android:inputType="text"
                    android:paddingVertical="5dp"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftar_3_alm"
                app:boxBackgroundColor="@color/trans"
                app:boxStrokeColor="@color/grey_primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="#AEAEAE">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sogoe_ui"
                    android:background="@color/trans"
                    android:inputType="text"
                    android:paddingVertical="5dp"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftar_4_ema"
                app:boxBackgroundColor="@color/trans"
                app:boxStrokeColor="@color/grey_primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="#AEAEAE">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sogoe_ui"
                    android:background="@color/trans"
                    android:inputType="text"
                    android:paddingVertical="5dp"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftar_5_pass"
                app:boxBackgroundColor="@color/trans"
                app:boxStrokeColor="@color/grey_primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:layout_gravity="center"
                app:hintTextColor="#AEAEAE">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sogoe_ui"
                    android:background="@color/trans"
                    android:inputType="text"
                    android:paddingVertical="5dp"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sogoe_ui"
                android:textSize="11dp"
                android:textColor="@color/grey_primary"
                android:text="@string/daftar_6_den"/>
            <Button
                android:layout_gravity="center"
                android:id="@+id/logInBtn"
                android:minHeight="0dp"
                android:layout_width="180dp"
                android:layout_marginTop="20sp"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:background="@drawable/bg_btn_rect"
                android:elevation="1dp"
                android:shadowRadius="3"
                android:shadowDx="3"
                android:shadowColor="@color/grey_primary"
                android:fontFamily="@font/sogoe_ui"
                android:text="@string/daftar_7_daf"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@null"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sogoe_ui"
                    android:text="@string/daftar_8_sdh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar_9_msk"
                    android:fontFamily="@font/sogoe_ui"
                    android:textColor="#108AD6"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>