<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_primary"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_1_wlc"
            android:fontFamily="@font/sogoe_ui"
            android:textStyle="bold"
            android:textColor="@color/blue_primary"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            style="@style/ShadowText"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_2_exm"
                android:paddingVertical="15dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_text"
                android:textSize="15dp"
                android:fontFamily="@font/sogoe_ui"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_3_pas"
                android:paddingVertical="15dp"
                android:inputType="textPassword"
                android:background="@drawable/bg_text"
                android:textSize="15dp"
                android:fontFamily="@font/sogoe_ui"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_masuk_login"
            android:minHeight="0dp"
            android:layout_width="180dp"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:background="@drawable/bg_btn_rect"
            android:elevation="1dp"
            android:fontFamily="@font/sogoe_ui"
            android:text="@string/login_4_msk"
            android:textAllCaps="false"
            android:shadowRadius="3.0"
            android:shadowDx="3"
            android:shadowColor="@color/grey_primary"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_5_ald"
            android:fontFamily="@font/sogoe_ui"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:clipToPadding="false"
            android:paddingVertical="3dp"
            >
            <ImageButton
                android:id="@+id/ib_fb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_btn_circle_green"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_facebook_24" />
            <ImageButton
                android:id="@+id/ib_twitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_btn_circle_green"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_twitter"
                android:padding="5dp"
                android:tint="@color/white"/>
            <ImageButton
                android:id="@+id/ib_google"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_btn_circle_green"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_google_plus"
                android:padding="5dp"
                android:tint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sogoe_ui"
                android:text="@string/login_6_blm"/>
            <TextView
                android:id="@+id/tv_daftar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_7_dft"
                android:fontFamily="@font/sogoe_ui"
                android:textColor="#108AD6"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>