<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    android:background="@drawable/bg"
    tools:context=".Activities.PaidActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="270dp"
                android:layout_height="170dp"
                android:src="@drawable/cleaner"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_bantu"
            android:layout_width="312dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sogoe_ui"
            android:gravity="center"
            android:text="@string/paid_1_ban" />
        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rb_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/ll_paid_check"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/bg_btn_circle_blue"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_check_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PAID"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14dp"/>
        </LinearLayout>
        <TableLayout
            android:id="@+id/tl_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/bg_primary"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_3_tar"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    />
                <Space android:layout_width="24dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tv_tarif_total_value_paid"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Rp130.000"
                    android:textSize="12sp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_4_met"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />
                <Space android:layout_width="24dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tv_paid_metode"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Cash"
                    android:textSize="12sp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paid_5_poi"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    />
                <Space android:layout_width="24dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tv_poin_value_paid"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="+150"
                    android:textSize="12sp"
                    />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_6_ter"
            android:gravity="center"
            android:fontFamily="@font/sogoe_ui"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_7_ped"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:fontFamily="@font/sogoe_ui"
            android:textStyle="bold"
            android:textColor="@color/grey_primary"
            />
        <Button
            android:id="@+id/btn_beranda_paid"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="24dp"
            android:text="Kembali ke Beranda"/>
    </LinearLayout>
</ScrollView>